# suitcase

./: .gitignore  README.md  docker-compose.yaml
web/: .env.sample  Dockerfile.app  Dockerfile.celery  README.md  entrypoint.app.sh  entrypoint.celery.sh  mypy.ini  pyproject.toml  requirements.txt
web/apps/: entrypoint.app.sh  entrypoint.celery.sh  package-lock.json  requirements.txt  tailwind.config.js
web/apps/alarm/: urls.py
web/apps/alarms/: apps.py  signals.py  urls.py  views.py
web/apps/chats/: consummers.py  routing.py
web/apps/client/: pagination.py  permissions.py  urls.py  views.py
web/apps/client/libs/: cache.py  custom_decorators.py
web/apps/common/: models.py
web/apps/common/migrations/: 0001_initial.py
web/apps/config/: asgi.py  celery.py  serializers.py  urls.py
web/apps/config/settings/: base.py  development.py  production.py
web/apps/core/: classes.py  models.py  permissions.py  serializers.py  tests.py  types.py
web/apps/core/libs/: custom_decorators.py  help_test.py
web/apps/products/: constants.py  models.py  pagination.py  permissions.py  serializers.py  swagger.py  tasks.py  urls.py  views.py
web/apps/products/migrations/: 0001_initial.py  0002_rename_products_product.py  0003_alter_product_image_url.py  0004_product_saved_image_url.py  0005_product_category.py  0006_product_is_active.py  0007_product_is_deleted.py  0008_product_is_uploaded.py  0008_remove_product_is_favorite.py  0009_auto_20231001_0018.py  0009_rename_is_uploaded_product_alarm_status.py  0010_remove_productfavorite_user_id.py  (+1 more)
web/apps/templates/: base.html  navbar.html
web/apps/users/: constants.py  models.py  permissions.py  serializers.py  swagger.py
web/config/: serializers.py  urls.py
web/config/settings/: base.py  development.py
web/static/js/: MyEventSource.js
web/static/src/: output.css
web/templates/: navbar.html
web/templates/accounts/: login.html
web/templates/client/: browse.html  home.html
(+45 files in other folders)
