[tool.poetry]
name = "suitcase"
version = "0.1.0"
description = "Suitcase project"
authors = ["Yeham Kim <dev.yamkim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^4.2.6"
djangorestframework = "^3.14.0"
requests = "^2.31.0"
celery = "^5.3.4"
django-filter = "^23.3"
django-compressor = "^4.4"
django-storages = "^1.14.2"
drf-spectacular = "^0.26.5"
django-celery-results = "^2.5.1"
channels = "^3.0.4"
django-eventstream = "^4.5.1"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
boto3 = "^1.28.78"
rembg = "^2.0.52"
django-redis = "^5.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
